# onsets-and-frames

./: .gitignore  LICENSE  README.md  dataset.py  evaluate.py  midi.py  models.py  pyproject.toml  requirements.txt  train.py  transcribe.py  transcribe_wav.py  utils.py
data/: prepare_maestro.sh
data/MAPS/flac/: MAPS_MUS-alb_esp2_AkPnCGdD.flac  MAPS_MUS-alb_esp2_AkPnStgb.flac  MAPS_MUS-alb_esp2_SptkBGAm.flac  MAPS_MUS-alb_esp2_SptkBGCl.flac  MAPS_MUS-alb_esp3_AkPnCGdD.flac  MAPS_MUS-alb_esp4_AkPnStgb.flac  MAPS_MUS-alb_esp5_SptkBGCl.flac  MAPS_MUS-alb_esp6_SptkBGCl.flac  MAPS_MUS-alb_se2_ENSTDkCl.flac  MAPS_MUS-alb_se2_StbgTGd2.flac  MAPS_MUS-alb_se3_AkPnBcht.flac  MAPS_MUS-alb_se3_AkPnBsdf.flac  MAPS_MUS-alb_se4_AkPnBsdf.flac  MAPS_MUS-alb_se6_AkPnStgb.flac  MAPS_MUS-alb_se7_AkPnBsdf.flac  MAPS_MUS-alb_se8_SptkBGAm.flac  MAPS_MUS-bach_846_AkPnBcht.flac  MAPS_MUS-bach_846_SptkBGAm.flac  MAPS_MUS-bach_847_AkPnBcht.flac  MAPS_MUS-bach_847_AkPnStgb.flac  MAPS_MUS-bach_847_SptkBGCl.flac  MAPS_MUS-bach_850_AkPnBsdf.flac  MAPS_MUS-bk_xmas1_AkPnBsdf.flac  MAPS_MUS-bk_xmas1_AkPnStgb.flac  MAPS_MUS-bk_xmas1_StbgTGd2.flac  MAPS_MUS-bk_xmas2_AkPnStgb.flac  MAPS_MUS-bk_xmas4_ENSTDkCl.flac  MAPS_MUS-bk_xmas4_SptkBGCl.flac  MAPS_MUS-bk_xmas4_StbgTGd2.flac  MAPS_MUS-bk_xmas5_StbgTGd2.flac  MAPS_MUS-bor_ps1_AkPnCGdD.flac  MAPS_MUS-bor_ps2_SptkBGAm.flac  MAPS_MUS-bor_ps5_AkPnStgb.flac  (+185 more)
models/: __init__.py  mel.py  transcriber.py
onsets_and_frames/: __init__.py  constants.py  dataset.py  decoding.py  discriminator.py  gan_losses.py  lstm.py  mel.py  midi.py  transcriber.py  utils.py
(+242 files in other folders)
