[tool.poetry]
name = "onsets-and-frames"
version = "0.1.0"
description = ""
authors = ["Henrik Grønbech <henrikgronbech@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scipy = ">=1.1.0"
torch = "1.2.0"
SoundFile = ">=0.10.2"
sacred = "0.7.4"
librosa = ">=0.6.2"
numpy = ">=1.15.0"
tqdm = ">=4.28.1"
mir-eval = {git = "https://github.com/craffel/mir_eval.git"}
mido = ">=1.2.9"
Pillow = ">=6.2.0"
pretty_midi = "^0.2.9"
tensorboard = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
